# genome-atlas

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  DATA_PROVENANCE.md  MANIFEST.in  README.md  UPDATE_STRATEGY.md  VALIDATION.md  coverage_audit.json  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml
docs/: GRAPH_SCHEMA.md  api.rst  benchmark.rst  conf.py  edge_build_lessons.md  index.rst  methods_caveats.md  requirements.txt  selection.rst
docs/manuscript/: main.tex  references.bib
genome_atlas/: __init__.py  api.py  cli.py  selection.py  systems.py
genome_atlas/data/: foundational_systems.yaml  pfam_whitelist.yaml
genome_atlas/graph/: __init__.py  build.py  view.py
genome_atlas/models/: __init__.py  graphsage.py
genome_atlas/utils/: __init__.py  size.py
notebooks/: 01_validation_selection.py  benchmark_results.json  validation_scenarios.yaml
reproduction/: bootstrap_ci_v7.json
scripts/: add_d2tgm5_esm2.py  add_d2tgm5_targets_v2.py  add_negative_controls.py  add_rna_nodes.py  add_structural_edges.py  afdb_coverage.py  analyze_organisms.py  audit_coverage.py  bootstrap_cis_v6.py  build_edges_v8.py  build_targets_table.py  create_negatives_parquet.py  create_train_gpickle.py  diagnose_size_bug.py  download_alphafold.py  download_pdb.py  download_uniprot_tsv.py  downsample_targets.py  embed_esm2.py  extract_alphafold_targets.py  extract_pdb_ids.py  extract_pdb_metadata.py  extract_plddt.py  ingest_to_duckdb_v2.py  materialize_graph.py  node2vec_inductive_v6.py  run_foldseek.sh  train_gnn.py  validate_whitelist.py  validate_yaml_fix.py  verify_afdb_tars.py  verify_pfam_accessions.py  vm_auto_pipeline.py  vm_final_status.py
scripts/figures/: fig1_architecture.py  fig2_embedding_umap.py  fig3_benchmark.py  fig4_radar.py  fig5_sankey.py
tests/: conftest.py  test_placeholder.py
tests/integration/: test_api_graph.py
tests/regression/: test_benchmark_ci.py
tests/unit/: test_aliases.py  test_api.py  test_api_extended.py  test_cli.py  test_cli_extended.py  test_graph_views.py  test_init.py  test_selection.py  test_selection_extended.py  test_selection_scoring.py  test_utils.py
