[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genome-atlas"
description = "Unified knowledge graph and embedding space for programmable genome-writing enzymes"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Anees Ahmed", email = "anees.ahmed2022@vitstudent.ac.in"}]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pen-core>=0.0.1",
    "duckdb>=0.10.0",
    "networkx>=3.2",
    "rdflib>=7.0",
    "torch>=2.2",
    "torch-geometric>=2.5",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "pytest-cov>=5.0", "ruff>=0.3", "mypy>=1.9", "pre-commit>=3.7"]
docs = ["sphinx>=7.3", "sphinx-autodoc-typehints", "furo", "myst-nb"]

[project.scripts]
genome-atlas = "genome_atlas.cli:main"

[project.urls]
Homepage = "https://github.com/ahmedanees-m/genome-atlas"
Documentation = "https://genome-atlas.readthedocs.io"
Repository = "https://github.com/ahmedanees-m/genome-atlas"
Changelog = "https://github.com/ahmedanees-m/genome-atlas/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["genome_atlas*"]

[tool.setuptools_scm]
write_to = "genome_atlas/_version.py"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=genome_atlas --cov-report=term-missing --cov-report=xml --strict-markers"
testpaths = ["tests"]
