[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genome-atlas"
version = "0.5.0"
description = "Programmable Genome-Writing Knowledge Graph (PEN-STACK Paper 1)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "torch>=2.0",
    "torch-geometric>=2.3",
    "networkx>=3.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "flake8>=6.0", "sphinx>=7.0"]
quantum = ["qiskit>=1.0", "qiskit-machine-learning>=0.7"]
all = [
    "pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "flake8>=6.0",
    "sphinx>=7.0", "qiskit>=1.0", "qiskit-machine-learning>=0.7",
]

[project.scripts]
genome-atlas = "genome_atlas.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["genome_atlas"]
omit = ["*/tests/*", "*/scripts/*", "*/notebooks/*"]
